# Haskell-WHILE-Code

./: .gitignore  Command.hs  Compound.hs  Condition.hs  Definitions.hs  EvalError.hs  Expression.hs  Language.hs  Main.hs  Makefile  Parser.hs  README.md  SimpleExp.hs  Token.hs  Utilities.hs  whilei.cabal
Examples/: collatz.while  factorial.while  is_leap_year.while
Text/Parsec/: Token.hs
src/: Command.hs  EvalError.hs  Executable.hs  Expression.hs  Main.hs  SimpleExp.hs  Token.hs
src/Text/Parsec/: LICENSE.txt
